# egile-agent-investment

./: .env.example  ARCHITECTURE.md  CREATION_SUMMARY.md  HUB_INTEGRATION.md  INSTALL.md  LICENSE  QUICKREF.md  README.md  example.py  install.bat  install.sh  portfolio.csv.example  pyproject.toml  start.bat  start.sh
src/egile_agent_investment/: __init__.py  mcp_client.py  plugin.py  run_agent.py  run_mcp.py  run_server.py
tests/: __init__.py
