[project]
name = "egile-agent-investment"
version = "0.1.0"
description = "Investment monitoring and analysis agent plugin for Egile Agent Core"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Egile Team" }
]
keywords = ["agent", "investment", "stocks", "finance", "ai", "mcp", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "egile-agent-core",
    "egile-mcp-investment",
    "agno>=2.3.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.entry-points."egile_agent_core.plugins"]
investment = "egile_agent_investment:InvestmentPlugin"

[project.scripts]
investment = "egile_agent_investment:run_all"
investment-mcp = "egile_agent_investment.run_mcp:run_mcp_only"
investment-agent = "egile_agent_investment.run_agent:run_agent_only"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/egile_agent_investment"]

[tool.black]
line-length = 100
